--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="card my-5">
     <div class="card-header">LOGIN FORM :</div>
     <div class="card-body">
-        <form>
+        <form ngForm #f="ngForm" (ngSubmit)="formData(f)">
             <div class="form-group">
                 <label for="username" class="label">Username</label>
-                <input type="text" class="form-control" placeholder="Enter your username">
+                <input type="text" class="form-control" placeholder="Enter your username" ngModel name="username">
             </div>
             <div class="form-group">
                 <label for="password" class="label">Password</label>
-                <input type="text" class="form-control" placeholder="Enter your password">
+                <input type="text" class="form-control" placeholder="Enter your password" ngModel name="password">
             </div>
             <button class="btn btn-success">Login</button>
         </form>
