--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,20 @@
         <form ngForm #f="ngForm" (ngSubmit)="formData(f)">
             <div class="form-group">
                 <label for="username" class="label">Username</label>
-                <input type="text" class="form-control" placeholder="Enter your username" ngModel name="username">
+                <input type="text" class="form-control" placeholder="Enter your username" ngModel name="username" #username="ngModel" required>
             </div>
             <div class="form-group">
                 <label for="password" class="label">Password</label>
-                <input type="text" class="form-control" placeholder="Enter your password" ngModel name="password">
+                <input type="text" class="form-control" placeholder="Enter your password" ngModel name="password" #password="ngModel" required>
             </div>
-            <button class="btn btn-success">Login</button>
+            <div class="row">
+                <div class="col-lg-6">
+                    <button class="btn btn-success" [disabled]="!f.valid">Login</button>
+                </div>
+                <div class="col-lg-6">
+                    <button class="btn btn-danger" type="reset">Clear</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
